# SDD_dipl_iitm_workshop

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  data.py  main.py  models.py  reports.py
openspec/changes/archive/2026-05-24-add-csv-export/: proposal.md
openspec/specs/reports/: specs.md
