[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "reports-api"
version = "0.1.0"
description = "FastAPI Reports API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
